--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@pinia/nuxt": "^0.5.1",
+    "@vue-youtube/core": "^0.0.6",
     "bulma": "^1.0.1",
     "dayjs": "^1.11.12",
     "vue": "latest"
   },
   "devDependencies": {
     "@nuxt/eslint": "^0.4.0",
+    "@nuxt/scripts": "^0.6.5",
     "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0",
     "nuxt": "^3.12.4",
