--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,8 @@
 name = "nabot-frontend"
 main = ".output/server/index.mjs"
 workers_dev = true
-compatibility_date = "2024-07-12"
-
-[site]
-bucket = ".output/public"
+compatibility_date = "2024-11-25"
+assets = { directory = "./.output/public/", binding = "ASSETS" }
 
 [vars]
 NUXT_PUBLIC_BACKEND_URL = "https://api-nabot.mori.space"
