Rename "Nabot" to "Chibot" and refactor configuration
Updated all references of "Nabot" to "Chibot" across the codebase, including UI, SEO metadata, and project configuration files. Refactored runtime configurations for frontend and backend URLs and optimized WebSocket logic for reliability and maintainability.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,10 @@
-name = "nabot-frontend"
+name = "chibot-frontend"
 main = ".output/server/index.mjs"
 workers_dev = true
 compatibility_date = "2025-04-24"
 assets = { directory = "./.output/public/", binding = "ASSETS" }
 
 [vars]
-NUXT_PUBLIC_BACKEND_URL = "https://api-nabot.mori.space"
+NUXT_PUBLIC_BACKEND_URL = "https://api-chibot.mori.space"
+NUXT_PUBLIC_FRONTEND_URL = "https://chibot.mori.space"
 
