--- a/package.json
+++ b/package.json
@@ -9,29 +9,37 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@pinia/nuxt": "^0.7.0",
-    "bulma": "^1.0.2",
+    "@pinia/nuxt": "^0.11.0",
+    "bulma": "^1.0.4",
     "dayjs": "^1.11.13",
     "vue": "latest",
     "vue3-youtube": "^0.1.9"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^0.7.1",
-    "@nuxt/scripts": "^0.9.5",
-    "@vueuse/core": "^10.11.1",
-    "@vueuse/nuxt": "^10.11.1",
-    "nuxt": "^3.16.2",
+    "@eslint/js": "^9.26.0",
+    "@nuxt/eslint": "^1.3.1",
+    "@nuxt/scripts": "^0.11.6",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "@vueuse/core": "^13.2.0",
+    "@vueuse/nuxt": "^13.2.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
+    "nuxt": "^3.17.3",
     "nuxt-purgecss": "^2.0.0",
-    "sass": "^1.81.0",
-    "sass-loader": "^16.0.3",
-    "wrangler": "^4.13.0",
-    "zod": "^3.23.8"
+    "prettier": "^3.5.3",
+    "sass": "^1.88.0",
+    "sass-loader": "^16.0.5",
+    "vue-eslint-parser": "^10.1.3",
+    "wrangler": "^4.15.2",
+    "zod": "^3.24.4"
   }
 }
