--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.7.1",
-    "@fortawesome/free-regular-svg-icons": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@pinia/nuxt": "^0.11.0",
-    "bulma": "^1.0.4",
     "dayjs": "^1.11.13",
     "vue": "latest",
     "vue3-youtube": "^0.1.9"
   },
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
-    "@nuxt/eslint": "^1.3.1",
+    "@eslint/js": "^9.27.0",
+    "@nuxt/eslint": "^1.4.0",
     "@nuxt/scripts": "^0.11.6",
+    "@nuxtjs/tailwindcss": "6.14.0",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "@vueuse/core": "^13.2.0",
@@ -36,7 +36,7 @@
     "nuxt": "^3.17.3",
     "nuxt-purgecss": "^2.0.0",
     "prettier": "^3.5.3",
-    "sass": "^1.88.0",
+    "sass": "^1.89.0",
     "sass-loader": "^16.0.5",
     "vue-eslint-parser": "^10.1.3",
     "wrangler": "^4.15.2",
