--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tailwindcss/typography": "^0.5.16",
     "@pinia/nuxt": "^0.11.0",
     "dayjs": "^1.11.13",
     "vue": "latest",
